--- a/privacy.html
+++ b/privacy.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Política de Privacidade — B3 Quick Quote</title>
+  <title>Privacy Policy — B3 Quick Quote</title>
   <style>
     body{margin:0; padding:24px; font:14px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color:#0b1220; background:#ffffff}
     h1{margin:0 0 8px 0; font-size:20px}
@@ -12,42 +12,52 @@
     code{background:#f4f6fb; padding:2px 6px; border-radius:6px}
     .muted{color:#475569}
     .box{background:#f8fafc; border:1px solid #e2e8f0; padding:12px 14px; border-radius:10px; max-width:900px}
+    a{color:#0066cc}
   </style>
 </head>
 <body>
-  <h1>Política de Privacidade — B3 Quick Quote</h1>
-  <p class="muted">Última atualização: 25/12/2025</p>
+  <h1>Privacy Policy — B3 Quick Quote</h1>
+  <p class="muted">Last updated: December 25, 2025</p>
 
   <div class="box">
-    <p><strong>Resumo:</strong> A extensão <strong>B3 Quick Quote</strong> não coleta, não vende e não compartilha dados pessoais.
-      Ela apenas consulta cotações públicas de mercado quando você solicita.</p>
+    <p><strong>Summary:</strong> The <strong>B3 Quick Quote</strong> extension does not collect, sell, or share personal data.
+      It only fetches public market quotes when you request them.</p>
   </div>
 
-  <h2>Dados coletados</h2>
-  <p><strong>Nenhum dado pessoal é coletado</strong>.</p>
+  <h2>Data Collected</h2>
+  <p><strong>No personal data is collected</strong>.</p>
 
-  <h2>Dados armazenados no seu dispositivo</h2>
+  <h2>Data Stored on Your Device</h2>
   <ul>
-    <li>Opcionalmente, a extensão pode armazenar localmente o <strong>último ticker</strong> digitado para facilitar o uso (via <code>chrome.storage</code>).</li>
+    <li>Optionally, the extension may store locally the <strong>last ticker</strong> you entered for convenience (via <code>chrome.storage</code>).</li>
   </ul>
-  <p>Esse dado fica <strong>somente no seu navegador</strong> e não é enviado para nenhum servidor do desenvolvedor.</p>
+  <p>This data stays <strong>only in your browser</strong> and is not sent to any developer server.</p>
 
-  <h2>Fontes de dados de mercado</h2>
-  <p>Quando você busca um ticker ou carrega as “maiores altas/baixas”, a extensão faz requisições HTTPS para endpoints do <strong>Yahoo Finance</strong> (ex.: <code>query1.finance.yahoo.com</code>) para obter informações públicas de mercado.</p>
+  <h2>Market Data Sources</h2>
+  <p>When you search for a ticker or load the "top gainers/losers", the extension makes HTTPS requests to <strong>Yahoo Finance</strong> endpoints (e.g., <code>query1.finance.yahoo.com</code>) to obtain public market information.</p>
 
-  <h2>Compartilhamento de dados</h2>
-  <p>A extensão não compartilha dados com terceiros. As requisições ao Yahoo Finance contêm apenas os símbolos consultados (tickers) necessários para retornar as cotações.</p>
+  <h2>Data Sharing</h2>
+  <p>The extension does not share data with third parties. Requests to Yahoo Finance contain only the queried symbols (tickers) necessary to return the quotes.</p>
 
-  <h2>Permissões</h2>
+  <h2>Permissions</h2>
   <ul>
-    <li><strong>storage</strong>: para salvar localmente o último ticker digitado (opcional).</li>
-    <li><strong>host permissions</strong> (Yahoo Finance): para permitir a consulta de cotações.</li>
+    <li><strong>storage</strong>: to locally save the last entered ticker (optional).</li>
+    <li><strong>host permissions</strong> (Yahoo Finance): to allow quote fetching.</li>
   </ul>
 
-  <h2>Publicidade, analytics e rastreamento</h2>
-  <p>A extensão não exibe anúncios, não usa analytics e não faz rastreamento de navegação.</p>
+  <h2>Advertising, Analytics, and Tracking</h2>
+  <p>The extension does not display ads, does not use analytics, and does not track browsing.</p>
 
-  <h2>Contato</h2>
-  <p>Se você precisar de suporte ou desejar remover dados locais, basta desinstalar a extensão (isso remove também o armazenamento local).</p>
+  <h2>Contact</h2>
+  <p>If you need support or wish to remove local data, simply uninstall the extension (this also removes local storage).</p>
+  <p>For questions or suggestions: <a href="mailto:elton.melo.santos@gmail.com">elton.melo.santos@gmail.com</a></p>
+
+  <h2>Developer</h2>
+  <p>
+    <strong>Elton Santos</strong><br>
+    <a href="https://github.com/eltonsantos" target="_blank" rel="noreferrer">GitHub</a> •
+    <a href="https://www.linkedin.com/in/eltonmelosantos" target="_blank" rel="noreferrer">LinkedIn</a> •
+    <a href="https://eltonmelosantos.com.br" target="_blank" rel="noreferrer">Website</a>
+  </p>
 </body>
 </html>
