B3 not working yet

--- a/privacy.html
+++ b/privacy.html
@@ -34,15 +34,15 @@
   <p>This data stays <strong>only in your browser</strong> and is not sent to any developer server.</p>
 
   <h2>Market Data Sources</h2>
-  <p>When you search for a ticker or load the "top gainers/losers", the extension makes HTTPS requests to <strong>Yahoo Finance</strong> endpoints (e.g., <code>query1.finance.yahoo.com</code>) to obtain public market information.</p>
+  <p>When you search for a ticker or load the "top gainers/losers", the extension makes HTTPS requests to <strong>brapi.dev</strong> API to obtain public market information from the Brazilian stock exchange (B3).</p>
 
   <h2>Data Sharing</h2>
-  <p>The extension does not share data with third parties. Requests to Yahoo Finance contain only the queried symbols (tickers) necessary to return the quotes.</p>
+  <p>The extension does not share data with third parties. Requests to brapi.dev contain only the queried symbols (tickers) necessary to return the quotes.</p>
 
   <h2>Permissions</h2>
   <ul>
     <li><strong>storage</strong>: to locally save the last entered ticker (optional).</li>
-    <li><strong>host permissions</strong> (Yahoo Finance): to allow quote fetching.</li>
+    <li><strong>host permissions</strong> (brapi.dev): to allow quote fetching.</li>
   </ul>
 
   <h2>Advertising, Analytics, and Tracking</h2>
