Translate to final user

--- a/privacy.html
+++ b/privacy.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy — B3 Quick Quote</title>
+  <title>Política de Privacidade — B3 Quick Quote</title>
   <style>
     body{margin:0; padding:24px; font:14px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color:#0b1220; background:#ffffff}
     h1{margin:0 0 8px 0; font-size:20px}
@@ -16,43 +16,44 @@
   </style>
 </head>
 <body>
-  <h1>Privacy Policy — B3 Quick Quote</h1>
-  <p class="muted">Last updated: December 25, 2025</p>
+  <h1>Política de Privacidade — B3 Quick Quote</h1>
+  <p class="muted">Última atualização: 25 de dezembro de 2025</p>
 
   <div class="box">
-    <p><strong>Summary:</strong> The <strong>B3 Quick Quote</strong> extension does not collect, sell, or share personal data.
-      It only fetches public market quotes when you request them.</p>
+    <p><strong>Resumo:</strong> A extensão <strong>B3 Quick Quote</strong> não coleta, vende ou compartilha dados pessoais.
+      Ela apenas consulta cotações públicas de mercado quando você solicita.</p>
   </div>
 
-  <h2>Data Collected</h2>
-  <p><strong>No personal data is collected</strong>.</p>
+  <h2>Dados Coletados</h2>
+  <p><strong>Nenhum dado pessoal é coletado</strong>.</p>
 
-  <h2>Data Stored on Your Device</h2>
+  <h2>Dados Armazenados no Seu Dispositivo</h2>
   <ul>
-    <li>Optionally, the extension may store locally the <strong>last ticker</strong> you entered for convenience (via <code>chrome.storage</code>).</li>
+    <li>Opcionalmente, a extensão pode armazenar localmente o <strong>último ticker</strong> digitado para facilitar o uso (via <code>chrome.storage</code>).</li>
+    <li>Cotações recentes são armazenadas em cache para exibição quando o mercado estiver fechado.</li>
   </ul>
-  <p>This data stays <strong>only in your browser</strong> and is not sent to any developer server.</p>
+  <p>Esses dados ficam <strong>apenas no seu navegador</strong> e não são enviados para nenhum servidor do desenvolvedor.</p>
 
-  <h2>Market Data Sources</h2>
-  <p>When you search for a ticker or load the "top gainers/losers", the extension makes HTTPS requests to <strong>brapi.dev</strong> API to obtain public market information from the Brazilian stock exchange (B3).</p>
+  <h2>Fontes de Dados de Mercado</h2>
+  <p>Quando você busca um ticker ou carrega as "maiores altas/baixas", a extensão faz requisições HTTPS para a API do <strong>brapi.dev</strong> para obter informações públicas do mercado brasileiro (B3).</p>
 
-  <h2>Data Sharing</h2>
-  <p>The extension does not share data with third parties. Requests to brapi.dev contain only the queried symbols (tickers) necessary to return the quotes.</p>
+  <h2>Compartilhamento de Dados</h2>
+  <p>A extensão não compartilha dados com terceiros. As requisições ao brapi.dev contêm apenas os símbolos consultados (tickers) necessários para retornar as cotações.</p>
 
-  <h2>Permissions</h2>
+  <h2>Permissões</h2>
   <ul>
-    <li><strong>storage</strong>: to locally save the last entered ticker (optional).</li>
-    <li><strong>host permissions</strong> (brapi.dev): to allow quote fetching.</li>
+    <li><strong>storage</strong>: para salvar localmente o último ticker digitado e cache de cotações.</li>
+    <li><strong>host permissions</strong> (brapi.dev): para permitir a consulta de cotações.</li>
   </ul>
 
-  <h2>Advertising, Analytics, and Tracking</h2>
-  <p>The extension does not display ads, does not use analytics, and does not track browsing.</p>
+  <h2>Publicidade, Analytics e Rastreamento</h2>
+  <p>A extensão não exibe anúncios, não usa analytics e não faz rastreamento de navegação.</p>
 
-  <h2>Contact</h2>
-  <p>If you need support or wish to remove local data, simply uninstall the extension (this also removes local storage).</p>
-  <p>For questions or suggestions: <a href="mailto:elton.melo.santos@gmail.com">elton.melo.santos@gmail.com</a></p>
+  <h2>Contato</h2>
+  <p>Se você precisar de suporte ou desejar remover dados locais, basta desinstalar a extensão (isso remove também o armazenamento local).</p>
+  <p>Para dúvidas ou sugestões: <a href="mailto:elton.melo.santos@gmail.com">elton.melo.santos@gmail.com</a></p>
 
-  <h2>Developer</h2>
+  <h2>Desenvolvedor</h2>
   <p>
     <strong>Elton Santos</strong><br>
     <a href="https://github.com/eltonsantos" target="_blank" rel="noreferrer">GitHub</a> •
