--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,7 @@
       <img class="logo" src="icon48.png" alt="B3 Quick Quote" />
       <div class="brand-text">
         <div class="brand-title">B3 Quick Quote</div>
-        <div class="brand-subtitle">Stocks & REITs • 15-min delay</div>
+        <div class="brand-subtitle">Ações & FIIs • Cotação rápida</div>
       </div>
     </div>
   </header>
@@ -22,17 +22,17 @@
       <label class="label" for="ticker">Ticker</label>
       <div class="row">
         <input id="ticker" class="input" type="text" inputmode="latin" autocomplete="off" spellcheck="false"
-          placeholder="E.g., PETR4 or HGLG11" />
-        <button id="btnSearch" class="btn" type="button">Search</button>
+          placeholder="Ex: PETR4 ou VALE3" />
+        <button id="btnSearch" class="btn" type="button">Buscar</button>
       </div>
       <div class="hint">
-        Free tickers: PETR4, VALE3, ITUB4, MGLU3. Get API key at <a href="https://brapi.dev" target="_blank" rel="noreferrer" style="color:var(--accent)">brapi.dev</a> for full access.
+        Tickers gratuitos: PETR4, VALE3, ITUB4, MGLU3. Para acesso completo, obtenha uma chave em <a href="https://brapi.dev" target="_blank" rel="noreferrer" style="color:var(--accent)">brapi.dev</a>
       </div>
     </section>
 
     <section class="card card-quote">
-      <div class="card-title">Quote <span id="qMarketStatus"></span></div>
-      <div id="quoteState" class="state">Enter a ticker and click Search.</div>
+      <div class="card-title">Cotação <span id="qMarketStatus"></span></div>
+      <div id="quoteState" class="state">Digite um ticker e clique em Buscar.</div>
 
       <div id="quoteBox" class="quote hidden">
         <div class="quote-top">
@@ -47,54 +47,54 @@
         </div>
 
         <div class="quote-grid">
-          <div class="kv"><div class="k">Open</div><div id="qOpen" class="v">—</div></div>
-          <div class="kv"><div class="k">High (D)</div><div id="qHigh" class="v">—</div></div>
-          <div class="kv"><div class="k">Low (D)</div><div id="qLow" class="v">—</div></div>
+          <div class="kv"><div class="k">Abertura</div><div id="qOpen" class="v">—</div></div>
+          <div class="kv"><div class="k">Máx (D)</div><div id="qHigh" class="v">—</div></div>
+          <div class="kv"><div class="k">Mín (D)</div><div id="qLow" class="v">—</div></div>
           <div class="kv"><div class="k">Volume</div><div id="qVol" class="v">—</div></div>
         </div>
 
         <div class="quote-footer">
           <div id="qTime" class="q-time">—</div>
-          <button id="btnRefresh" class="btn btn-ghost" type="button">Refresh</button>
+          <button id="btnRefresh" class="btn btn-ghost" type="button">Atualizar</button>
         </div>
       </div>
     </section>
 
     <section class="card card-tops">
       <div class="tops-head">
-        <div class="card-title">Top Gainers & Losers <span id="topsMarketStatus"></span></div>
-        <button id="btnLoadTops" class="btn btn-ghost" type="button">Load</button>
+        <div class="card-title">Maiores Altas e Baixas <span id="topsMarketStatus"></span></div>
+        <button id="btnLoadTops" class="btn btn-ghost" type="button">Carregar</button>
       </div>
 
-      <div id="topsState" class="state">Click "Load" to see Top 3 Stocks and REITs.</div>
+      <div id="topsState" class="state">Clique em "Carregar" para ver as variações.</div>
 
       <div id="topsBox" class="tops hidden">
         <div class="tops-grid">
           <div class="tops-col">
-            <div class="tops-title">STOCKS • Gainers</div>
+            <div class="tops-title">AÇÕES • Altas</div>
             <div id="stocksGainers" class="list"></div>
-            <div class="tops-title tops-title-spaced">STOCKS • Losers</div>
+            <div class="tops-title tops-title-spaced">AÇÕES • Baixas</div>
             <div id="stocksLosers" class="list"></div>
           </div>
 
           <div class="tops-col">
-            <div class="tops-title">REITs • Gainers</div>
+            <div class="tops-title">FIIs • Altas</div>
             <div id="fiisGainers" class="list"></div>
-            <div class="tops-title tops-title-spaced">REITs • Losers</div>
+            <div class="tops-title tops-title-spaced">FIIs • Baixas</div>
             <div id="fiisLosers" class="list"></div>
           </div>
         </div>
 
         <div class="mini-note">
-          Note: Top 3 is calculated from a curated list of liquid assets. Does not represent the entire market.
+          Obs: Modo demonstração com tickers gratuitos (PETR4, VALE3, ITUB4, MGLU3).
         </div>
       </div>
     </section>
 
     <section class="footer">
-      <a class="link" href="privacy.html" target="_blank" rel="noreferrer">Privacy</a>
+      <a class="link" href="privacy.html" target="_blank" rel="noreferrer">Privacidade</a>
       <span class="dot">•</span>
-      <a class="link" href="https://brapi.dev" target="_blank" rel="noreferrer">Source: brapi.dev</a>
+      <a class="link" href="https://brapi.dev" target="_blank" rel="noreferrer">Fonte: brapi.dev</a>
     </section>
   </main>
 
